# am_surfaces

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
amsurf/: BRDF.py  OTSU.py  segment.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 02.02_crb_atc-meeting-2_150725.ipynb  workflow-01_crb_LISA-microscope-workflow.ipynb
